# cmake_exercise

./: README.md
chapter01/e01/: CMakeLists.txt
chapter01/e03/: CMakeLists-static.txt  CMakeLists.txt  e03.cpp  message.cpp
chapter01/e05/: build.bat
chapter01/e07/: CMakeLists.txt
chapter01/e08/: CMakeLists.txt  README.MD
chapter02/e01/: CMakeLists.txt  README.MD  build.bat
chapter02/e02/: README.MD  build.bat  e02.cpp
chapter02/e03/: README.MD  e03.cpp
chapter02/e04/: build.bat
chapter02/e05/: CMakeLists.txt  README.MD
chapter04/e01/: CMakeLists.txt  test.cpp
chapter04/e06/: CMakeLists.txt
chapter04/e07/: test.cpp
chapter06/e06/: CMakeLists.txt  README.MD  config.h.in  test.cpp
chapter08/e01/: CMakeLists.txt  build.bat
chapter08/e01/src/: CMakeLists.txt  e01.cpp
chapter08/e06/: CMakeLists.txt  README.MD  build.bat
chapter08/e06/src/: test.cpp
chapter10/e01/: CMakeLists.txt  README.MD
chapter10/e01/src/: CMakeLists.txt  hello.cpp  message.cpp
chapter10/e03/: CMakeCPack.cmake  CMakeLists.txt  README.MD  build.bat
chapter10/e03/src/: CMakeLists.txt  hello.cpp  message.cpp  message.h
chaptor01/e01/: build.bat
chaptor01/e04/: CMakeLists.txt  message.h
chaptor01/e05/: CMakeLists.txt
chaptor01/e06/: CMakeLists.txt  build.bat
chaptor01/e07/: build.bat
chaptor01/e08/: build.bat  main.cpp  math.h
chaptor02/e02/: CMakeLists.txt
chaptor02/e03/: CMakeLists.txt  build.bat
chaptor02/e04/: CMakeLists.txt  README.MD
chaptor02/e05/: build.bat  config.h.in  e05.cpp
chaptor04/e01/: README.MD
chaptor04/e06/: README.MD  build.bat  test.cpp
chaptor04/e07/: CMakeLists.txt  README.MD
